--- a/ivete/experiments/qa/qa.ipynb
+++ b/ivete/experiments/qa/qa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -12,67 +12,44 @@
       "Processing /home/sbumseo/git/ivete\n",
       "Building wheels for collected packages: ivete\n",
       "  Building wheel for ivete (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for ivete: filename=ivete-1.0.0-py3-none-any.whl size=2272 sha256=9a44f5c892eb48eb15233b6fb12d10d0e45e856e1de8cd6f29da0b76d268b64b\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-a8xg9ta8/wheels/d3/e8/99/b45fc6158bfdebc264a05d8781941b49d19db5b0694e57ecb4\n",
+      "\u001b[?25h  Created wheel for ivete: filename=ivete-1.0.0-py3-none-any.whl size=2293 sha256=a50c83a1de6d1a453a051c68127dfb8dc057f574f3408b9eb55043d98cd0ff08\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-vefz0lta/wheels/d3/e8/99/b45fc6158bfdebc264a05d8781941b49d19db5b0694e57ecb4\n",
       "Successfully built ivete\n",
       "Installing collected packages: ivete\n",
       "  Attempting uninstall: ivete\n",
       "    Found existing installation: ivete 1.0.0\n",
       "    Uninstalling ivete-1.0.0:\n",
       "      Successfully uninstalled ivete-1.0.0\n",
-      "Successfully installed ivete-1.0.0\n"
+      "Successfully installed ivete-1.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install --upgrade --force-reinstall --no-cache-dir ../../../"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/sbumseo/git/ivete/ivete/experiments/qa'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from transformers import BertConfig, BertForQuestionAnswering, BertTokenizer\n",
-    "from ivete.deploy import DeployArguments"
+    "%pip install --upgrade --force-reinstall --no-cache-dir ../../../"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import BertConfig, BertForQuestionAnswering, BertTokenizer\n",
+    "from ivete.deploy import DeployArguments, deploy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'inference_args'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=0'>1</a>\u001b[0m args \u001b[39m=\u001b[39m DeployArguments(\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=1'>2</a>\u001b[0m     pretrained_model_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mbeomi/kcbert-base\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=2'>3</a>\u001b[0m     downstream_model_path\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m./checkpoints/\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=3'>4</a>\u001b[0m     inference_args\u001b[39m=\u001b[39;49m{\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=4'>5</a>\u001b[0m         \u001b[39m'\u001b[39;49m\u001b[39mmax_seq_length\u001b[39;49m\u001b[39m'\u001b[39;49m: \u001b[39m128\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=5'>6</a>\u001b[0m         \u001b[39m'\u001b[39;49m\u001b[39mmax_query_length\u001b[39;49m\u001b[39m'\u001b[39;49m: \u001b[39m32\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=6'>7</a>\u001b[0m     }\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bbigpicture/home/sbumseo/git/ivete/ivete/experiments/qa/qa.ipynb#ch0000003vscode-remote?line=7'>8</a>\u001b[0m )\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'inference_args'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downstream_model_path: ./checkpoints/epoch=0-val_loss=0.47.ckpt\n"
      ]
     }
    ],
@@ -89,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +99,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +410,7 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,6 +465,90 @@
     "        'context': context,\n",
     "        'answer': pred_text,\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'question': '한강대교가 위치한 곳은?',\n",
+       " 'context': '한강대교(漢江大橋)는 서울특별시 용산구 이촌동에 있는 용산구 한강로3가와 동작구 본동 사이를 잇는 총연장 1,005m의 길이의 교량(다리)이다. 한강에 놓인 최초의 도로 교량으로, 제1한강교라고 불렸다. 1917년 개통된 뒤 몇 차례의 수난을 거쳐 지금에 이른다. 다리 아래로는 노들섬이 있다. 과거에는 국도 제1호선이 이 다리를 통하여 서울로 연결되었었다.',\n",
+       " 'answer': '서울특별시 용산구 이촌동에'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context = \"한강대교(漢江大橋)는 서울특별시 용산구 이촌동에 있는 용산구 한강로3가와 동작구 본동 사이를 잇는 총연장 1,005m의 길이의 교량(다리)이다. 한강에 놓인 최초의 도로 교량으로, 제1한강교라고 불렸다. 1917년 개통된 뒤 몇 차례의 수난을 거쳐 지금에 이른다. 다리 아래로는 노들섬이 있다. 과거에는 국도 제1호선이 이 다리를 통하여 서울로 연결되었었다.\"\n",
+    "question = \"한강대교가 위치한 곳은?\"\n",
+    "inference(question=question, context=context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app 'ivete.deploy' (lazy loading)\n",
+      " * Environment: production\n",
+      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
+      "[2022-07-19 17:14:20,805] ERROR in app: Exception on / [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 2073, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 1519, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask_cors/extension.py\", line 165, in wrapped_function\n",
+      "    return cors_after_request(app.make_response(f(*args, **kwargs)))\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 1517, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 1503, in dispatch_request\n",
+      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**req.view_args)\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/ivete/deploy/__init__.py\", line 12, in index\n",
+      "    return render_template(\"index.html\")\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/templating.py\", line 155, in render_template\n",
+      "    ctx.app.jinja_env.get_or_select_template(template_name_or_list),\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/environment.py\", line 1081, in get_or_select_template\n",
+      "    return self.get_template(template_name_or_list, parent, globals)\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/environment.py\", line 1010, in get_template\n",
+      "    return self._load_template(name, globals)\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/environment.py\", line 969, in _load_template\n",
+      "    template = self.loader.load(self, name, self.make_globals(globals))\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/loaders.py\", line 126, in load\n",
+      "    source, filename, uptodate = self.get_source(environment, name)\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/templating.py\", line 59, in get_source\n",
+      "    return self._get_source_fast(environment, template)\n",
+      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/templating.py\", line 95, in _get_source_fast\n",
+      "    raise TemplateNotFound(template)\n",
+      "jinja2.exceptions.TemplateNotFound: index.html\n",
+      "127.0.0.1 - - [19/Jul/2022 17:14:20] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [19/Jul/2022 17:14:20] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "app = deploy(inference, \"default\")\n",
+    "app.run()"
    ]
   }
  ],
