--- a/experiments/qa/qa.ipynb
+++ b/experiments/qa/qa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,27 +11,39 @@
      "text": [
       "Processing /home/sbumseo/git/ivete\n",
       "Building wheels for collected packages: ivete\n",
-      "  Building wheel for ivete (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for ivete: filename=ivete-1.0.0-py3-none-any.whl size=2293 sha256=a50c83a1de6d1a453a051c68127dfb8dc057f574f3408b9eb55043d98cd0ff08\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-vefz0lta/wheels/d3/e8/99/b45fc6158bfdebc264a05d8781941b49d19db5b0694e57ecb4\n",
-      "Successfully built ivete\n",
+      "  Building wheel for ivete (setup.py) ... \u001b[?25lerror\n",
+      "\u001b[31m  ERROR: Command errored out with exit status 1:\n",
+      "   command: /home/sbumseo/git/ivete/experiments/qa/.venv/bin/python -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/tmp/pip-req-build-n3ykveu1/setup.py'\"'\"'; __file__='\"'\"'/tmp/pip-req-build-n3ykveu1/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' bdist_wheel -d /tmp/pip-wheel-ui0ad33r\n",
+      "       cwd: /tmp/pip-req-build-n3ykveu1/\n",
+      "  Complete output (6 lines):\n",
+      "  usage: setup.py [global_opts] cmd1 [cmd1_opts] [cmd2 [cmd2_opts] ...]\n",
+      "     or: setup.py --help [cmd1 cmd2 ...]\n",
+      "     or: setup.py --help-commands\n",
+      "     or: setup.py cmd --help\n",
+      "  \n",
+      "  error: invalid command 'bdist_wheel'\n",
+      "  ----------------------------------------\u001b[0m\n",
+      "\u001b[31m  ERROR: Failed building wheel for ivete\u001b[0m\n",
+      "\u001b[?25h  Running setup.py clean for ivete\n",
+      "Failed to build ivete\n",
       "Installing collected packages: ivete\n",
       "  Attempting uninstall: ivete\n",
       "    Found existing installation: ivete 1.0.0\n",
       "    Uninstalling ivete-1.0.0:\n",
       "      Successfully uninstalled ivete-1.0.0\n",
-      "Successfully installed ivete-1.0.0\n",
+      "    Running setup.py install for ivete ... \u001b[?25ldone\n",
+      "\u001b[?25hSuccessfully installed ivete-1.0.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install --upgrade --force-reinstall --no-cache-dir ../../../"
+    "%pip install --upgrade --force-reinstall --no-cache-dir ../../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +111,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -143,6 +155,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -166,6 +179,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -189,6 +203,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -212,6 +227,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -235,6 +251,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -258,6 +275,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -281,6 +299,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -304,6 +323,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -327,6 +347,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -350,6 +371,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -373,6 +395,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -396,6 +419,7 @@
        "          )\n",
        "          (intermediate): BertIntermediate(\n",
        "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
        "          )\n",
        "          (output): BertOutput(\n",
        "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -410,7 +434,7 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +504,7 @@
        " 'answer': '서울특별시 용산구 이촌동에'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +517,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/sbumseo/git/ivete/experiments/qa/.venv/lib/python3.8/site-packages/ivete'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os, ivete\n",
+    "os.path.dirname(ivete.__file__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -512,49 +557,28 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
-      "[2022-07-19 17:14:20,805] ERROR in app: Exception on / [GET]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 2073, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 1519, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask_cors/extension.py\", line 165, in wrapped_function\n",
-      "    return cors_after_request(app.make_response(f(*args, **kwargs)))\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 1517, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/app.py\", line 1503, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**req.view_args)\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/ivete/deploy/__init__.py\", line 12, in index\n",
-      "    return render_template(\"index.html\")\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/templating.py\", line 155, in render_template\n",
-      "    ctx.app.jinja_env.get_or_select_template(template_name_or_list),\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/environment.py\", line 1081, in get_or_select_template\n",
-      "    return self.get_template(template_name_or_list, parent, globals)\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/environment.py\", line 1010, in get_template\n",
-      "    return self._load_template(name, globals)\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/environment.py\", line 969, in _load_template\n",
-      "    template = self.loader.load(self, name, self.make_globals(globals))\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/jinja2/loaders.py\", line 126, in load\n",
-      "    source, filename, uptodate = self.get_source(environment, name)\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/templating.py\", line 59, in get_source\n",
-      "    return self._get_source_fast(environment, template)\n",
-      "  File \"/home/sbumseo/git/ivete/ivete/experiments/qa/.venv/lib/python3.8/site-packages/flask/templating.py\", line 95, in _get_source_fast\n",
-      "    raise TemplateNotFound(template)\n",
-      "jinja2.exceptions.TemplateNotFound: index.html\n",
-      "127.0.0.1 - - [19/Jul/2022 17:14:20] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [19/Jul/2022 17:14:20] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+      "127.0.0.1 - - [20/Jul/2022 10:47:06] \"POST /qa/api HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Jul/2022 10:47:10] \"\u001b[32mGET /qa HTTP/1.1\u001b[0m\" 308 -\n",
+      "127.0.0.1 - - [20/Jul/2022 10:47:10] \"GET /qa/ HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
-    "app = deploy(inference, \"default\")\n",
+    "import os\n",
+    "path = os.path.abspath(\"../../templates/\")\n",
+    "app = deploy(\n",
+    "    inference=inference,\n",
+    "    api_name=\"qa\",\n",
+    "    template_name=\"default\",\n",
+    "    template_path=path,\n",
+    ")\n",
     "app.run()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ivete-qa",
+   "display_name": "ivete-exp-qa",
    "language": "python",
    "name": ".venv"
   },
@@ -573,7 +597,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "8543b33476c1fe9c73dea3c2f1df7beaed86afaa95724469612001f68f2f8ac3"
    }
   }
  },
