--- a/experiments/qa/qa.ipynb
+++ b/experiments/qa/qa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,28 +11,16 @@
      "text": [
       "Processing /home/sbumseo/git/ivete\n",
       "Building wheels for collected packages: ivete\n",
-      "  Building wheel for ivete (setup.py) ... \u001b[?25lerror\n",
-      "\u001b[31m  ERROR: Command errored out with exit status 1:\n",
-      "   command: /home/sbumseo/git/ivete/experiments/qa/.venv/bin/python -u -c 'import sys, setuptools, tokenize; sys.argv[0] = '\"'\"'/tmp/pip-req-build-n3ykveu1/setup.py'\"'\"'; __file__='\"'\"'/tmp/pip-req-build-n3ykveu1/setup.py'\"'\"';f=getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__);code=f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' bdist_wheel -d /tmp/pip-wheel-ui0ad33r\n",
-      "       cwd: /tmp/pip-req-build-n3ykveu1/\n",
-      "  Complete output (6 lines):\n",
-      "  usage: setup.py [global_opts] cmd1 [cmd1_opts] [cmd2 [cmd2_opts] ...]\n",
-      "     or: setup.py --help [cmd1 cmd2 ...]\n",
-      "     or: setup.py --help-commands\n",
-      "     or: setup.py cmd --help\n",
-      "  \n",
-      "  error: invalid command 'bdist_wheel'\n",
-      "  ----------------------------------------\u001b[0m\n",
-      "\u001b[31m  ERROR: Failed building wheel for ivete\u001b[0m\n",
-      "\u001b[?25h  Running setup.py clean for ivete\n",
-      "Failed to build ivete\n",
+      "  Building wheel for ivete (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for ivete: filename=ivete-1.0.0-py3-none-any.whl size=2459 sha256=53ea013bb150b88fa3be5536fc7635ca3dbb3e37f9b4a604378b51c6e98186bc\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-7m2how0p/wheels/d3/e8/99/b45fc6158bfdebc264a05d8781941b49d19db5b0694e57ecb4\n",
+      "Successfully built ivete\n",
       "Installing collected packages: ivete\n",
       "  Attempting uninstall: ivete\n",
       "    Found existing installation: ivete 1.0.0\n",
       "    Uninstalling ivete-1.0.0:\n",
       "      Successfully uninstalled ivete-1.0.0\n",
-      "    Running setup.py install for ivete ... \u001b[?25ldone\n",
-      "\u001b[?25hSuccessfully installed ivete-1.0.0\n",
+      "Successfully installed ivete-1.0.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -43,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,19 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "checkpoint = torch.load(\n",
-    "    args.downstream_model_path,\n",
+    "    args.downstream_model_path, \n",
     "    map_location=torch.device(\"cpu\"),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +99,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +422,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +492,7 @@
        " 'answer': '서울특별시 용산구 이촌동에'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +514,7 @@
        "'/home/sbumseo/git/ivete/experiments/qa/.venv/lib/python3.8/site-packages/ivete'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -556,21 +544,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [20/Jul/2022 10:47:06] \"POST /qa/api HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [20/Jul/2022 10:47:10] \"\u001b[32mGET /qa HTTP/1.1\u001b[0m\" 308 -\n",
-      "127.0.0.1 - - [20/Jul/2022 10:47:10] \"GET /qa/ HTTP/1.1\" 200 -\n"
+      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "path = os.path.abspath(\"../../templates/\")\n",
     "app = deploy(\n",
     "    inference=inference,\n",
     "    api_name=\"qa\",\n",
-    "    template_name=\"default\",\n",
-    "    template_path=path,\n",
     ")\n",
     "app.run()"
    ]
@@ -578,9 +560,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ivete-exp-qa",
+   "display_name": "Python 3.8.10 ('.venv': venv)",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -597,7 +579,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8543b33476c1fe9c73dea3c2f1df7beaed86afaa95724469612001f68f2f8ac3"
+    "hash": "36b2fb9bf1793705501c8e5beb5370d1d8d12b3fdd694ceeb9f0f83c817e24d0"
    }
   }
  },
