--- a/experiments/qa/qa.ipynb
+++ b/experiments/qa/qa.ipynb
@@ -12,8 +12,8 @@
       "Processing /home/sbumseo/git/ivete\n",
       "Building wheels for collected packages: ivete\n",
       "  Building wheel for ivete (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for ivete: filename=ivete-1.0.0-py3-none-any.whl size=2459 sha256=53ea013bb150b88fa3be5536fc7635ca3dbb3e37f9b4a604378b51c6e98186bc\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-7m2how0p/wheels/d3/e8/99/b45fc6158bfdebc264a05d8781941b49d19db5b0694e57ecb4\n",
+      "\u001b[?25h  Created wheel for ivete: filename=ivete-1.0.0-py3-none-any.whl size=34585 sha256=20fdbfce3c9032f3c2b79884aeae24a4e1c84aa73e98a197c0633a24a364b295\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-45rfe7ag/wheels/d3/e8/99/b45fc6158bfdebc264a05d8781941b49d19db5b0694e57ecb4\n",
       "Successfully built ivete\n",
       "Installing collected packages: ivete\n",
       "  Attempting uninstall: ivete\n",
@@ -533,6 +533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/home/sbumseo/git/ivete/experiments/qa/.venv/lib/python3.8/site-packages/ivete/deploy/templates/default\n",
       " * Serving Flask app 'ivete.deploy' (lazy loading)\n",
       " * Environment: production\n",
       "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
@@ -544,7 +545,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n"
+      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [20/Jul/2022 15:04:51] \"\u001b[32mGET /qa HTTP/1.1\u001b[0m\" 308 -\n",
+      "127.0.0.1 - - [20/Jul/2022 15:04:51] \"GET /qa/ HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [20/Jul/2022 15:04:55] \"POST /qa/api HTTP/1.1\" 200 -\n"
      ]
     }
    ],
